--- a/app/src/main/res/anim/fade_in_out.xml
+++ b/app/src/main/res/anim/fade_in_out.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/accelerate_decelerate_interpolator">
-    <alpha
-        android:fromAlpha="1.0"
-        android:toAlpha="0.5"
-        android:duration="150" />
-    <alpha
-        android:fromAlpha="0.5"
-        android:toAlpha="1.0"
-        android:startOffset="150"
-        android:duration="150" />
-</set>
+<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="500"
+    android:fromAlpha="1.0"
+    android:interpolator="@android:anim/accelerate_interpolator"
+    android:toAlpha="0.0" />
