--- a/app/src/main/res/animator/play_to_pause_fixed.xml
+++ b/app/src/main/res/animator/play_to_pause_fixed.xml
@@ -1,7 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <objectAnimator
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="300"
     android:propertyName="pathData"
+    android:valueType="pathType"
     android:valueFrom="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2z M10,16.5v-9l6,4.5 -6,4.5z"
-    android:valueTo="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2z M9,16h2V8H9V16z M13,16h2V8h-2V16z"
-    android:valueType="pathType" />
+    android:valueTo="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2z M9,16h2V8H9V16z M13,16h2V8h-2V16z"/>
