--- a/app/src/main/res/drawable/avd_pause_to_play.xml
+++ b/app/src/main/res/drawable/avd_pause_to_play.xml
@@ -1,6 +1,6 @@
 <animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/ic_pause">
+    android:drawable="@drawable/ic_pause_compatible">
     <target
-        android:name="pause"
+        android:name="path"
         android:animation="@animator/pause_to_play_animation" />
 </animated-vector>
