--- a/app/src/main/res/layout/activity_pomodoro.xml
+++ b/app/src/main/res/layout/activity_pomodoro.xml
@@ -27,6 +27,15 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <Spinner
+            android:id="@+id/duration_selector"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ProgressBar
             android:id="@+id/progress_bar"
             style="?android:attr/progressBarStyleHorizontal"
@@ -38,7 +47,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/duration_selector" />
 
         <TextView
             android:id="@+id/timer_text"
@@ -58,7 +67,7 @@
             android:layout_marginTop="24dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/pomodoro_timer"
-            app:srcCompat="@drawable/avd_play_pause"
+            app:srcCompat="@drawable/ic_play_fixed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/progress_bar" />
@@ -72,7 +81,7 @@
             android:text="Reset"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/start_pause_button" />
+            app:layout_constraintTop_toBottomOf="@+id/start_pause_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
